--- a/src/formREG/style.css
+++ b/src/formREG/style.css
@@ -69,3 +69,7 @@ button:hover {
   display: flex;
   justify-content: space-between;
 }
+.login-btn {
+  display: flex;
+  justify-content: space-between;
+}
